typos and parameters

--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -18,6 +18,8 @@ Resources:
   SubmitJob:
     Type: AWS::CloudFormation::Stack
     Properties:
+      Parameters:
+        JobQueueArn: !Ref JobQueueArn
       TemplateURL: SubmitJob/cloudformation.yml
 
 
