--- a/api/SubmitJob/cloudformation.yml
+++ b/api/SubmitJob/cloudformation.yml
@@ -1,9 +1,13 @@
-AWSTemplateFormatVersion: 2010-09-09:wq
+AWSTemplateFormatVersion: 2010-09-09
 
 Outputs:
 
   LambdaArn:
     Value: !GetAtt Lambda.Arn
+
+Parameters:
+  JobQueueArn:
+    Type: String
 
 Resources:
 
@@ -16,7 +20,7 @@ Resources:
   Role:
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Ref AWS""StackName
+      RoleName: !Ref AWS::StackName
       AssumeRolePolicyDocument:
         Version: 2012-10-17
         Statement:
@@ -38,7 +42,6 @@ Resources:
             Action: batch:SubmitJob
             Resource:
               - !Ref JobQueueArn
-              - !Ref JobDefinitionArn
 
   Lambda:
     Type: AWS::Lambda::Function
