add job definition and job queue to lamda as environment variables

--- a/api/SubmitJob/cloudformation.yml
+++ b/api/SubmitJob/cloudformation.yml
@@ -9,6 +9,9 @@ Parameters:
   JobQueueArn:
     Type: String
 
+  JobDefinition:
+    Type: String
+
 Resources:
 
   LogGroup:
@@ -47,6 +50,9 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: !Ref AWS::StackName
+      Environment:
+        JobQueue: !Ref JobQueueArn
+        JobDefinition: !Ref JobDefinition
       Code: src/
       Handler: main.lambda_handler
       MemorySize: 128
