--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -47,4 +47,4 @@ jobs:
 
     - name: Run cfn-lint
       # ingore "W3002 This code may only work with `package` cli command" warning
-      run: cfn-lint --ignore-checks W3002 --template *.yml **/*.yml
+      run: cfn-lint --ignore-checks W3002 E3006 --template *.yml **/*.yml
