--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -92,7 +92,7 @@ Resources:
     Properties:
       StageName: v1
       RestApiId: !Ref RestApi
-      DeploymentId: !Ref Deployment$REPLACE_ME
+      DeploymentId: !Ref Deployment$REPLACE_ME$
 
   IamRole:
     Type: AWS::IAM::Role
