fix reference to incorrect template

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Deploy to AWS CloudFormation
       run: |
-        sed "s/$REPLACE_ME$/$(openssl rand -hex 4)/" cloudformation.yaml > cloudformation-replaced.yaml
+        sed "s/$REPLACE_ME$/$(openssl rand -hex 4)/" api/cloudformation_unprocessed.yml > api/cloudformation.yml
         aws cloudformation package \
           --template-file cloudformation-replaced.yml \
           --s3-bucket ${TEMPLATE_BUCKET} \
