--- a/api/hyp3_api/spec.yml
+++ b/api/hyp3_api/spec.yml
@@ -5,7 +5,7 @@ info:
 paths:
   /jobs:
     post:
-      operationId: hyp3_api.submit_job
+      operationId: hyp3_api.definitions.submit_job
       requestBody:
         content:
           application/json:
