--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,6 @@ jobs:
     - env:
         JOB_QUEUE: job-queue
         JOB_DEFINITION: job-definition
+        AWS_DEFAULT_REGION: us-west-2
         PYTHONPATH: api
       run: pytest api
