--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -19,6 +19,14 @@ Parameters:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
 
+Outputs:
+
+  JobQueueArn:
+    Value: !Ref JobQueue
+
+  RtcGammaJobDefinition:
+    Value: !Ref RtcGammaJobDefinition
+
 Resources:
 
   LaunchInstanceStack:
