--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
         aws-region: ${{ env.AWS_REGION }}
 
     - env:
-        JOB_QUEUE: myQueue
+        JOB_QUEUE: myQueue2
         JOB_DEFINITION: myJobDefinition
       run: |
         python -m pip install --upgrade pip
