--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -29,15 +29,15 @@ Outputs:
 
 Resources:
 
-  Api:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      Parameters:
-        JobQueueArn: !GetAtt Cluster.Outputs.JobQueueArn
-        JobDefinition: !GetAtt Cluster.Outputs.JobDefinition
-        AuthPublicKey: !Ref AuthPublicKey
-        AuthAlgorithm: !Ref AuthAlgorithm
-      TemplateURL: api/cloudformation.yml
+  # Api:
+  #   Type: AWS::CloudFormation::Stack
+  #   Properties:
+  #     Parameters:
+  #       JobQueueArn: !GetAtt Cluster.Outputs.JobQueueArn
+  #       RtcGammaJobDefinition: !GetAtt Cluster.Outputs.RtcGammaJobDefinition
+  #       AuthPublicKey: !Ref AuthPublicKey
+  #       AuthAlgorithm: !Ref AuthAlgorithm
+  #     TemplateURL: api/cloudformation.yml
 
   Cluster:
     Type: AWS::CloudFormation::Stack
