fix test pythonpath

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,7 +19,7 @@ jobs:
 
     - env:
         AWS_DEFAULT_REGION: us-west-2
-        PYTHONPATH: api
+        PYTHONPATH: api/src
       run: |
         export $(xargs < api/tests/cfg.env)
         pytest api
