CAPABILITY_IAM instead of CAPABILITY_NAMED_IAM

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
           --stack-name hyp3-${GITHUB_REF##*/} \
           --template-file packaged.yml \
           --role-arn ${CLOUDFORMATION_ROLE_ARN} \
-          --capabilities CAPABILITY_NAMED_IAM \
+          --capabilities CAPABILITY_IAM \
           --parameter-overrides \
               "VpcId=${VPC_ID}" \
               "EDLUsername=${EDL_USERNAME}" \
