--- a/batch-cluster/launch-instance/cloudformation.yml
+++ b/batch-cluster/launch-instance/cloudformation.yml
@@ -37,7 +37,7 @@ Resources:
             Action:
             - logs:CreateLogStream
             - logs:PutLogEvents
-            Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group/*"
+            Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/*"
           - Effect: Allow
             Action:
             - ec2:RunInstances
