--- a/batch-cluster/terminate-idle-instances/cloudformation.yml
+++ b/batch-cluster/terminate-idle-instances/cloudformation.yml
@@ -32,7 +32,7 @@ Resources:
             Action:
             - logs:CreateLogStream
             - logs:PutLogEvents
-            Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group/*"
+            Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/lambda/*"
           - Effect: Allow
             Action:
             - batch:DescribeComputeEnvironments
