revise url format

--- a/api/cloudformation.yml
+++ b/api/cloudformation.yml
@@ -99,6 +99,8 @@ Resources:
     Properties:
       DomainName: !Ref CustomDomainName
       RestApiId: !Ref RestApi
+      Stage: !Ref Stage
+      BasePath: !Ref Stage
 
   ApiRole:
     Type: AWS::IAM::Role
