--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -171,7 +171,7 @@ Resources:
     Type: AWS::StepFunctions::StateMachine
     Properties:
       RoleArn: !ref RtcGammaStepFunctionRole
-      DefinitionString: !sub |-
+      DefinitionString: !Sub |-
         {
          "StartAt": "BATCH_JOB",
          "States": {
