drop unneeded !Sub

--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -174,7 +174,7 @@ Resources:
     Type: AWS::StepFunctions::StateMachine
     Properties:
       RoleArn: !Ref StepFunctionRole
-      DefinitionString: !Sub |-
+      DefinitionString: |-
         {
          "StartAt": "BATCH_JOB",
          "States": {
