fix ref for role arn

--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -173,7 +173,7 @@ Resources:
   StepFunction:
     Type: AWS::StepFunctions::StateMachine
     Properties:
-      RoleArn: !Ref StepFunctionRole
+      RoleArn: !GetAtt StepFunctionRole.Arn
       DefinitionString: |-
         {
          "StartAt": "BATCH_JOB",
