--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -212,6 +212,13 @@ Resources:
                 Resource:
                   - !Ref JobQueue
                   - !Ref RtcGammaJobDefinition
+              - Effect: Allow
+                Action:
+                  - events:PutTargets
+                  - events:PutRule
+                  - events:DescribeRule
+                Resource: arn:aws:events:${AWS::Region}:${AWS::AccountId}:rule/StepFunctionsGetEventsForBatchJobsRule
+
 
   Bucket:
     Type: AWS::S3::Bucket
