working api tests

--- a/api/tests/cfg.env
+++ b/api/tests/cfg.env
@@ -1,3 +1,4 @@
+STEP_FUNCTION_ARN=arn:aws:states:us-west-2:1234:stateMachine:hyp3-step-function
 JOB_DEFINITION=arn:aws:batch:us-west-2:1234:job-definition/hyp3-rtc-gamma:1
 JOB_QUEUE=arn:aws:batch:us-west-2:1234:job-queue/hyp3-develop
 AUTH_PUBLIC_KEY=123456789
