add '.$' to parameters for path reference

--- a/batch-cluster/cloudformation.yml
+++ b/batch-cluster/cloudformation.yml
@@ -182,9 +182,9 @@ Resources:
              "Type": "Task",
              "Resource": "arn:aws:states:::batch:submitJob.sync",
              "Parameters": {
-               "JobDefinition": "$.jobDefinition",
-               "JobName": "$.parameters.granule",
-               "JobQueue": "$.jobQueue",
+               "JobDefinition.$": "$.jobDefinition",
+               "JobName.$": "$.parameters.granule",
+               "JobQueue.$": "$.jobQueue",
                "Parameters.$": "$.parameters"
              },
              "End": true
