--- a/cloudformation.yml
+++ b/cloudformation.yml
@@ -57,3 +57,11 @@ Resources:
         EDLPassword: !Ref EDLPassword
         RtcGammaImage: !Ref RtcGammaImage
       TemplateURL: batch-cluster/cloudformation.yml
+
+  StepFunction:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      Parameters:
+        JobQueueArn: !GetAtt Cluster.Outputs.JobQueueArn
+        RtcGammaJobDefinition: !GetAtt Cluster.Outputs.RtcGammaJobDefinition
+      TemplateURL: step-function/cloudformation.yml
